--- a/app/index.html
+++ b/app/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title></title>
+        <title>Angular JS - Create A Hero's Story</title>
         <script src='https://ajax.googleapis.com/ajax/libs/angularjs/1.4.8/angular.min.js'></script>
         <script src='https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.4.2/angular-ui-router.min.js'></script>
     </head>
     <body ng-app="angular">
-        <ui-view></ui-view>
+        <ui-view>
+            <!-- dashboard.html goes here -->
+        </ui-view>
 
         <!-- My Scripts -->
         <script src='./angular/angular.module.js'></script>
